--- a/_includes/scoreboard.html
+++ b/_includes/scoreboard.html
@@ -1,4 +1,4 @@
-<table class="leaderboards__table" id="scoreboard" data-manipulated="false">
+<table class="leaderboards__table" id="scoreboardTable" data-manipulated="false">
     <thead>
     <tr>
         <th>Navn</th>
