--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -218,11 +218,11 @@
                 <h1 class="site-section__header__title">Scoreboard</h1>
             </header>
             <p class="leaderboards__ingress">
-                Under ser du en oversikt over de raskeste løperne i Lillo BlazeCup2020. 
-                Lista blir manuelt oppdatert, så dersom du ikke ser navnet ditt umiddelbart etter at du har løpt inn til en vinnertid må du smøre det inn med tålmodighet.
+                Siden veldig få har rukket å løpe alle distansene starter vi de første ukene av Blaze Cup med å vise en oversikt over alles innsatser i vilkårlig rekkefølge.
+                Lista blir manuelt oppdatert, så dersom du ikke ser navnet og tiden din dukke opp rett etter at du har sendt inn din innsats er det forklaringen. 
             </p>
 			
-			{% include test-loop.html %}
+			{% include scoreboard.html %}
             
         </section>
         <footer id="footer" class="footer">
@@ -244,6 +244,7 @@
     <script src="{{ site.url }}/js/vendor/moment.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+    <script src="{{ site.url }}/js/tablesort.min.js"></script>
     <script src="{{ site.url }}/js/main.js"></script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163405044-1"></script>
