--- a/_includes/scoreboard.html
+++ b/_includes/scoreboard.html
@@ -1,7 +1,7 @@
 <table class="leaderboards__table" id="scoreboardTable" data-manipulated="false">
     <thead>
     <tr>
-        <th>Navn</th>
+        <th data-sort-method='none'>Navn</th>
         <th>BC1</th>
         <th>BC2</th>
         <th>BC3</th>
