--- a/_style/main.scss
+++ b/_style/main.scss
@@ -649,7 +649,6 @@ width: 150px;
     ========================================================================== */
 
 .leaderboards {
-
     a {
         color: inherit;
         text-decoration: none;
@@ -657,7 +656,9 @@ width: 150px;
     }
 }
 
-
+[data-sort-method="none"]:hover {
+    cursor: default;
+}
 
 .leaderboards__ingress {
     color: $sb-grey3;
@@ -685,8 +686,16 @@ width: 150px;
 }
 .leaderboards__table tr th:first-child,
 .leaderboards__table tr td:first-child {
-    width: 25em;
+    width: 50%;
 }
+
+@media screen and (min-width: 700px){
+    .leaderboards__table tr th:first-child,
+    .leaderboards__table tr td:first-child {
+        width: 35em;
+    }
+}
+
 .leaderboards__table tr th:last-child,
 .leaderboards__table tr td:last-child {
 //width: em;
