--- a/_includes/scoreboard.html
+++ b/_includes/scoreboard.html
@@ -5,7 +5,7 @@
         <th>BC1</th>
         <th>BC2</th>
         <th>BC3</th>
-        <th>Totalt</th>
+        <th>Total score</th>
     </tr>
     </thead>
     <tbody>
