--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -178,11 +178,11 @@
     </main>
 
 
-    <script src={{ "/assets/scripts/vendor/moment.js" | relative_url }}></script>
+    <script src={{ "/assets/js/vendor/moment.js" | relative_url }}></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('{{ "/assets/vendor/jquery-3.4.1.min.js" | relative_url }}><\/script>')</script>
-    <script src={{ "/assets/plugins/tablesort.min.js" | relative_url }}></script>
-    <script src={{ "/assets/scripts/main.js" | relative_url }}></script>
+    <script>window.jQuery || document.write('{{ "/assets/js/vendor/jquery-3.4.1.min.js" | relative_url }}><\/script>')</script>
+    <script src={{ "/assets/js/plugins/tablesort.min.js" | relative_url }}></script>
+    <script src={{ "/assets/js/main.js" | relative_url }}></script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163405044-1"></script>
     <script>
