--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="nb">
 
 <head> 
-    <meta charset="utf-8">
+    <meta charset="utf-8"> 
     <title>Lillo Blaze Cup 2020 | 3 trails 1 cup</title>
     <meta name="description" content="En virtuell stiløpecup i Lillomarka 1. mai til 31. juli i regi av Sky Blazers">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,14 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ "/assets/style/main.css" | relative_url }}">
 </head>
- 
-<body>
+  
+<body> 
     <main>
         {% include header.html %} 
 
         <section class="site-section img-break">
-            <img src="{{ "/assets/img/header.jpg" | relative_url }}" alt="Hanserino som løper en ukjent sti i Lillomarka">
-        </section>
+            <img src="{{ "assets/img/header.jpg" | relative_url }}" alt="Hanserino som løper en ukjent sti i Lillomarka">
+        </section> 
 
         <section id="ruter" data-anchor="ruter" class="site-section segments">
             <header class="site-section__header">
