--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@
         {% include header.html %} 
 
         <section class="site-section img-break">
-            <img src="{{ "assets/img/header.jpg" | relative_url }}" alt="Hanserino som løper en ukjent sti i Lillomarka">
+            <img src="{{ "/assets/img/header.jpg" | relative_url }}" alt="Hanserino som løper en ukjent sti i Lillomarka">
         </section> 
 
         <section id="ruter" data-anchor="ruter" class="site-section segments">
@@ -33,7 +33,7 @@
                             <div class="segment__resources">
                                 <img src="{{ "/assets/img/stirsdag.jpg" | relative_url }}" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
                                 <a href="https://www.strava.com/segments/16455185" target="_blank">Stirsdag Classic på Strava</a>
-                                <a href="{{ "/assets/downloads/Stirsdag.gpx.zip" | relative_url }}" download="Stirsdag.gpx.zip">Last ned .gpx (25kB)</a>
+                                <a href="{{ "/assets/downloads/Stirsdag_Classic.gpx.zip" | relative_url }}" download="Stirsdag.gpx.zip">Last ned .gpx (28kB)</a>
                                 <a href="https://forms.gle/AcD1uQW7j7CYMqzG8" target="_blank">Meld inn din innsats</a>
                             </div>
 
