--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -182,6 +182,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('{{ "/assets/js/vendor/jquery-3.4.1.min.js" | relative_url }}><\/script>')</script>
     <script src={{ "/assets/js/plugins/tablesort.min.js" | relative_url }}></script>
+    <script src={{ "/assets/js/plugins/tablesort.number.js" | relative_url }}></script>
     <script src={{ "/assets/js/main.js" | relative_url }}></script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163405044-1"></script>
