tekst-endringer på scoreboard

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -165,8 +165,8 @@
                 <h1 class="site-section__header__title">Scoreboard</h1>
             </header>
             <p class="leaderboards__ingress">
-                Siden veldig få har rukket å løpe alle distansene starter vi de første ukene av Blaze Cup med å vise en oversikt over alles innsatser i vilkårlig rekkefølge.
-                Lista blir manuelt oppdatert, så dersom du ikke ser navnet og tiden din dukke opp rett etter at du har sendt inn din innsats er det forklaringen. 
+                Under ser du et scoreboard alle løperne og deres innsats i Blaze Cup 2020. <br >
+                Lista blir manuelt oppdatert, så dersom du ikke ser navnet og tiden din dukke opp umiddelbart er det forklaringen. 
             </p>
 			
 			{% include scoreboard.html %}
