scoreboard sub page added

--- a/_style/main.scss
+++ b/_style/main.scss
@@ -7,6 +7,7 @@
 
 
 // Partials -------------- //
+@import 'partials/scoreboard-page';
 @import 'partials/typography';
 
 [data-touch="false"] .mobileOnly { 
