--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -165,8 +165,7 @@
                 <h1 class="site-section__header__title">Scoreboard</h1>
             </header>
             <p class="leaderboards__ingress">
-                Under ser du et scoreboard alle løperne og deres innsats i Blaze Cup 2020. <br >
-                Lista blir manuelt oppdatert, så dersom du ikke ser navnet og tiden din dukke opp umiddelbart er det forklaringen. 
+                Dette er ståa pr. {{ "now" | date: "%d/%m/%Y" }}. Dæven steike hvor fort dere løper! Lillomarka kommer jo ikke til å se ut etter 31. juli.
             </p>
 			
 			{% include scoreboard.html %}
