--- a/_includes/scoreboard.html
+++ b/_includes/scoreboard.html
@@ -1,3 +1,10 @@
+<div class="toggleWrapper">
+  <input type="checkbox" class="dn" id="dn" checked="true" />
+  <label for="dn" class="toggle">
+    <span class="toggle__handler"></span>
+  </label>
+</div>
+
 <table
   class="leaderboards__table"
   id="scoreboardTable"
@@ -14,21 +21,28 @@
   </thead>
   <tbody>
     {% for runner in site.runners %}
+    
     <tr class="runner-row">
       <td>
         {% if runner.strava_id %}
-        <a href="https://www.strava.com/athletes/{{ runner.strava_id }}"
-          >{{ runner.name }}</a
-        >
+        <a href="https://www.strava.com/athletes/{{ runner.strava_id }}">{{ runner.name }}</a>
         {% else if %} {{ runner.name }} {% endif %}
       </td>
-      <td class="bc1-time" data-time="{{ runner.stirsdag_time }}"></td>
-      <td class="bc2-time" data-time="{{ runner.lilo_trail_time }}"></td>
-      <td class="bc3-time" data-time="{{ runner.lillomarka_rundt_time }}"></td>
-      <td class="score" data-score=""></td>
+      <td class="bc1" data-time="{{ runner.stirsdag_time }}">
+        <span class="points"></span>
+        <span class="time">{{ runner.stirsdag_time }}</span>
+      </td>
+      <td class="bc2" data-time="{{ runner.lilo_trail_time }}">
+        <span class="points"></span>
+        <span class="time">{{ runner.lilo_trail_time }}</span>
+      </td>
+      <td class="bc3" data-time="{{ runner.lillomarka_rundt_time }}">
+        <span class="points"></span>
+        <span class="time">{{ runner.lillomarka_rundt_time }}</span>
+      </td>
+
+      <td class="total" data-score=""><span class="points"></span><span class="time"></span></td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
-
-<script></script>
