--- a/_includes/scoreboard.html
+++ b/_includes/scoreboard.html
@@ -1,8 +1,6 @@
-<div class="toggleWrapper">
-  <input type="checkbox" class="dn" id="dn" checked="true" />
-  <label for="dn" class="toggle">
-    <span class="toggle__handler"></span>
-  </label>
+<div class="score-switch">
+  <label for="scoreSwitch">Vis tider</label>
+  <input type="checkbox" id="scoreSwitch" />
 </div>
 
 <table
@@ -16,7 +14,7 @@
       <th data-sort-default data-sort-method="number">BC1</th>
       <th data-sort-method="number">BC2</th>
       <th data-sort-method="number">BC3</th>
-      <th data-sort-method="number">Total BC Score</th>
+      <th data-sort-method="number">Totalt</th>
     </tr>
   </thead>
   <tbody>
