--- a/_layouts/scoreboard.html
+++ b/_layouts/scoreboard.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{ "/assets/style/main.css" | relative_url }}">
 </head>
   
-<body data-score-mode="points"> 
+<body data-time=""> 
     <main class="scoreboard-page">
         <header class="scoreboard-page__header">
             <h1>{{page.title}}</h1>
