total score is now dominating table sorting

--- a/_includes/scoreboard.html
+++ b/_includes/scoreboard.html
@@ -11,14 +11,14 @@
   <thead>
     <tr>
       <th data-sort-method="none">Navn</th>
-      <th data-sort-default data-sort-method="number">BC1</th>
+      <th data-sort-method="number">BC1</th>
       <th data-sort-method="number">BC2</th>
       <th data-sort-method="number">BC3</th>
-      <th data-sort-method="number">Totalt</th>
+      <th data-sort-method="number" data-sort-default>Totalt</th>
     </tr>
   </thead>
   <tbody>
-    {% for runner in site.runners %}
+    {% for runner in site.runners %} 
     
     <tr class="runner-row">
       <td>
