--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -147,6 +147,9 @@
                     mellom 1. mai og 31. juli og deler på antall
                     Stirsdager segmentet er verdt.
                 </p>
+                <p>
+                    Alle starter med 150 poeng på hvert segment. Dette blir gjort om til reelle poeng når du har gjort en innsats. Vi gjør dette for å gjøre sluttkalkuleringen enklere og for å ha noe å strekke seg etter. 
+                </p>
 
                 <h4>Eksempel</h4>
                 <p>
